.pkgstage/vitte-2.1.1/root/usr/local/share/vitte/src/vitte/compiler/tests/diagnostics/borrowck/use_after_move.txt.snap
error[BORROW_E_USE_AFTER_MOVE]: value `value` used after move
  --> src/vitte/compiler/tests/diagnostics/borrowck/use_after_move.vit:3:6
   |
 2 | let moved = value
   |             ----- move happened here
 3 | give value
   |      ^^^^^ use after move is forbidden
   |
note: clear, contextual, and correction-oriented diagnostics
help: look for the first move or borrow that keeps the value unavailable at the primary span
  suggestion: help src/vitte/compiler/tests/diagnostics/borrowck/use_after_move.vit:3:6 borrow the value before the move when ownership is not needed (medium confidence) [manual] because a moved value is unavailable at this use
  suggestion: help src/vitte/compiler/tests/diagnostics/borrowck/use_after_move.vit:3:6 reorder this use before the move if the control flow allows it (medium confidence) [manual] because the later use depends on the earlier move
  suggestion: help src/vitte/compiler/tests/diagnostics/borrowck/use_after_move.vit:3:6 reorder, shorten, or clone around the highlighted access (medium confidence) [maybe_machine] because ownership-path
  suggestion: help src/vitte/compiler/tests/diagnostics/borrowck/use_after_move.vit:3:6 clone or copy only when the type and cost make that explicit (low confidence) [manual] because ownership repairs can change performance or semantics

Pipeline:
  phase=borrowck -> step=borrow checking -> family=ownership -> correction_strategy=ownership-path -> recovery_scope=current-control-flow -> confidence=medium -> lexer -> parser -> AST -> HIR -> sema -> borrowck [FAILED]
docs: docs://language/ownership
